--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14"
+    },
+    "dependencies": {
+        "firebase": "8.6",
+        "save": "^2.5.0"
     }
 }
